[gd_scene load_steps=24 format=2]

[ext_resource path="res://addons/rmsmartshape/shapes/point_array.gd" type="Script" id=1]
[ext_resource path="res://Vail_2.0/Scripts/Puzzle_senha.gd" type="Script" id=2]
[ext_resource path="res://addons/rmsmartshape/shapes/point.gd" type="Script" id=3]
[ext_resource path="res://addons/rmsmartshape/materials/shape_material.gd" type="Script" id=4]
[ext_resource path="res://addons/rmsmartshape/vertex_properties.gd" type="Script" id=5]
[ext_resource path="res://addons/rmsmartshape/shapes/shape_closed.gd" type="Script" id=6]
[ext_resource path="res://Vail_2.0/Sprites/Environment/textura_chao.png" type="Texture" id=7]
[ext_resource path="res://Vail_2.0/Sprites/Environment/Token1.png" type="Texture" id=8]
[ext_resource path="res://Vail_2.0/Sprites/Environment/light2.png" type="Texture" id=9]
[ext_resource path="res://Vail_1.0/Sprites/light.png" type="Texture" id=10]

[sub_resource type="Resource" id=1]
script = ExtResource( 5 )
texture_idx = 8
flip = false
width = 1.0

[sub_resource type="Resource" id=2]
script = ExtResource( 3 )
position = Vector2( -0.0737934, 608.183 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 1 )

[sub_resource type="Resource" id=3]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=4]
script = ExtResource( 3 )
position = Vector2( 1920.1, 608.546 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 3 )

[sub_resource type="Resource" id=5]
script = ExtResource( 5 )
texture_idx = 4
flip = false
width = 1.0

[sub_resource type="Resource" id=6]
script = ExtResource( 3 )
position = Vector2( 0.0158672, 680.003 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 5 )

[sub_resource type="Resource" id=7]
script = ExtResource( 5 )
texture_idx = 8
flip = false
width = 1.0

[sub_resource type="Resource" id=8]
script = ExtResource( 3 )
position = Vector2( -0.0737934, 608.183 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 7 )

[sub_resource type="Resource" id=9]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=10]
script = ExtResource( 3 )
position = Vector2( 1920.01, 679.953 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 9 )

[sub_resource type="Resource" id=11]
script = ExtResource( 1 )
_points = {
0: SubResource( 2 ),
1: SubResource( 4 ),
2: SubResource( 6 ),
3: SubResource( 8 ),
4: SubResource( 10 )
}
_point_order = [ 0, 1, 4, 2, 3 ]
_constraints = {
[ 0, 3 ]: 15
}
_next_key = 8

[sub_resource type="Resource" id=12]
script = ExtResource( 4 )
_edge_meta_materials = [  ]
fill_textures = [ ExtResource( 7 ) ]
fill_texture_normals = [  ]
fill_texture_z_index = -10
fill_mesh_offset = 0.0
render_offset = 0.0

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 46, 47 )

[node name="Puzzle_senha" type="Node2D"]
script = ExtResource( 2 )

[node name="chao" type="StaticBody2D" parent="."]

[node name="SS2D_Shape_Closed" type="Node2D" parent="chao"]
position = Vector2( 0, 400 )
script = ExtResource( 6 )
editor_debug = false
curve_bake_interval = 20.0
_points = SubResource( 11 )
material_overrides = {

}
shape_material = SubResource( 12 )
tessellation_stages = 5
tessellation_tolerence = 4.0
flip_edges = false
render_edges = true
collision_size = 32.0
collision_offset = 0.0
collision_polygon_node_path = NodePath("../CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="chao"]
polygon = PoolVector2Array( -3.39499, 1004.87, 1923.42, 1005.23, 1923.32, 1083.26, -3.29082, 1083.31 )

[node name="Pilar" type="Area2D" parent="."]
position = Vector2( 750, 818 )
collision_layer = 8

[node name="Token1" type="Sprite" parent="Pilar"]
scale = Vector2( 0.226017, 0.226017 )
texture = ExtResource( 8 )

[node name="Light2D" type="Light2D" parent="Pilar"]
position = Vector2( 4, -74 )
scale = Vector2( 0.138092, 0.138092 )
texture = ExtResource( 9 )
energy = 0.0

[node name="light" type="Sprite" parent="Pilar/Light2D"]
position = Vector2( -10.3989, -5.19946 )
texture = ExtResource( 10 )

[node name="Pilar_Area_1" type="CollisionShape2D" parent="Pilar"]
position = Vector2( 0, 145 )
shape = SubResource( 13 )

[node name="Pilar2" type="Area2D" parent="."]
position = Vector2( 1000, 818 )
collision_layer = 8

[node name="Token1" type="Sprite" parent="Pilar2"]
scale = Vector2( 0.226017, 0.226017 )
texture = ExtResource( 8 )

[node name="Pilar_Area_2" type="CollisionShape2D" parent="Pilar2"]
position = Vector2( 0, 145 )
shape = SubResource( 13 )

[node name="Light2D2" type="Light2D" parent="Pilar2"]
position = Vector2( 6, -74 )
scale = Vector2( 0.138092, 0.138092 )
texture = ExtResource( 9 )
energy = 0.0

[node name="light" type="Sprite" parent="Pilar2/Light2D2"]
position = Vector2( -10.3989, -5.19946 )
texture = ExtResource( 10 )

[node name="Pilar3" type="Area2D" parent="."]
position = Vector2( 1249, 818 )
collision_layer = 8

[node name="Token1" type="Sprite" parent="Pilar3"]
scale = Vector2( 0.226017, 0.226017 )
texture = ExtResource( 8 )

[node name="Pilar_Area_3" type="CollisionShape2D" parent="Pilar3"]
position = Vector2( 0, 145 )
shape = SubResource( 13 )

[node name="Light2D3" type="Light2D" parent="Pilar3"]
position = Vector2( 7, -73 )
scale = Vector2( 0.138092, 0.138092 )
texture = ExtResource( 9 )
energy = 0.0
shadow_item_cull_mask = 2

[node name="light" type="Sprite" parent="Pilar3/Light2D3"]
position = Vector2( -10.3989, -5.19946 )
texture = ExtResource( 10 )
[connection signal="area_entered" from="Pilar" to="." method="_on_Pilar_area_entered"]
[connection signal="area_entered" from="Pilar2" to="." method="_on_Pilar2_area_entered"]
[connection signal="area_entered" from="Pilar3" to="." method="_on_Pilar3_area_entered"]
